Fix the read only label alignment

--- a/web-client-plugin/resources/ui/LabelIntegerPresentation.css
+++ b/web-client-plugin/resources/ui/LabelIntegerPresentation.css
@@ -15,10 +15,14 @@ input[type="number"] {
     width: 35%;
     padding-left: 15px;
     padding-right: 5px;
-    padding-top: 3px;
+}
+
+.labelIntegerPresentationRightLabelEditable {
+    padding-top: 2px;
 }
 
 .labelIntegerPresentationRightLabel > span {
     color: #666;
     word-wrap: break-word;
+    vertical-align: middle;
 }
